[gd_scene load_steps=2 format=3 uid="uid://cabh1kk66tfmr"]

[ext_resource type="Script" uid="uid://dm1xabuujc2nw" path="res://scripts/dash_ability.gd" id="1_k3kw6"]

[node name="DashAbility" type="Node2D"]
script = ExtResource("1_k3kw6")

[node name="Cooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
